--- a/package.json
+++ b/package.json
@@ -1,13 +1,29 @@
 {
-  "name": "myapp",
+  "name": "test",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
+    "bootstrap": "^4.5.3",
+    "eslint-config-react-app": "^5.2.1",
+    "eslint-plugin-import": "^2.22.1",
+    "eslint-plugin-jsx-a11y": "^6.3.1",
+    "eslint-plugin-prettier": "^3.1.4",
+    "eslint-plugin-react": "^7.24.0",
+    "eslint-plugin-react-hooks": "^4.1.2",
+    "jquery": "^3.5.1",
+    "node-sass": "^4.14.1",
+    "prettier": "^2.1.2",
+    "prop-types": "^15.7.2",
+    "rc-queue-anim": "^1.8.5",
     "react": "^17.0.2",
+    "react-bootstrap": "^1.3.0",
+    "react-datepicker": "^3.3.0",
     "react-dom": "^17.0.2",
+    "react-icons": "^3.11.0",
+    "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
     "web-vitals": "^1.0.1"
   },
