--- a/package.json
+++ b/package.json
@@ -23,8 +23,10 @@
     "react-datepicker": "^3.3.0",
     "react-dom": "^17.0.2",
     "react-icons": "^3.11.0",
+    "react-player": "^2.9.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
+    "video-react": "^0.14.1",
     "web-vitals": "^1.0.1"
   },
   "scripts": {
