npm i react-ticker

--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "react-player": "^2.9.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
+    "react-ticker": "^1.2.2",
     "video-react": "^0.14.1",
     "web-vitals": "^1.0.1"
   },
