--- a/package.json
+++ b/package.json
@@ -26,7 +26,9 @@
     "react-player": "^2.9.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
+    "react-slick": "^0.28.1",
     "react-ticker": "^1.2.2",
+    "slick-carousel": "^1.8.1",
     "video-react": "^0.14.1",
     "web-vitals": "^1.0.1"
   },
