--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "eslint-plugin-react": "^7.24.0",
     "eslint-plugin-react-hooks": "^4.1.2",
     "jquery": "^3.5.1",
+    "leaflet": "^1.7.1",
     "node-sass": "^4.14.1",
     "prettier": "^2.1.2",
     "prop-types": "^15.7.2",
