--- a/package.json
+++ b/package.json
@@ -58,5 +58,9 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-  }
+  },
+  "main": "index.js",
+  "repository": "https://github.com/josie-shie/artddict-react.git",
+  "author": "chun2332 <smile84122332@gmail.com>",
+  "license": "MIT"
 }
