--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "react-datepicker": "^3.3.0",
     "react-dom": "^17.0.2",
     "react-icons": "^3.11.0",
+    "react-native": "^0.64.2",
     "react-player": "^2.9.0",
     "react-responsive-carousel": "^3.2.19",
     "react-router-dom": "^5.2.0",
