--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
     "antd": "^4.16.6",
+    "axios": "^0.21.1",
     "bootstrap": "^4.5.3",
     "eslint-config-react-app": "^5.2.1",
     "eslint-plugin-import": "^2.22.1",
