--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "slick-carousel": "^1.8.1",
     "start": "^5.1.0",
     "sweetalert": "^2.1.2",
+    "universal-cookie": "^4.0.4",
     "video-react": "^0.14.1",
     "web-vitals": "^1.0.1"
   },
