--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "prettier": "^2.1.2",
     "prop-types": "^15.7.2",
     "rc-queue-anim": "^1.8.5",
+    "rc-slider": "^9.7.2",
     "react": "^17.0.2",
     "react-avatar-editor": "^11.1.0",
     "react-bootstrap": "^1.3.0",
