--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "react-hook-form": "^7.10.1",
     "react-icons": "^3.11.0",
     "react-native": "^0.64.2",
+    "react-paginate": "^7.1.3",
     "react-player": "^2.9.0",
     "react-responsive-carousel": "^3.2.19",
     "react-router-dom": "^5.2.0",
