--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "react-native": "^0.64.2",
     "react-paginate": "^7.1.3",
     "react-player": "^2.9.0",
+    "react-rating-stars-component": "^2.2.0",
     "react-responsive-carousel": "^3.2.19",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
