--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "react-ticker": "^1.2.2",
     "slick-carousel": "^1.8.1",
     "start": "^5.1.0",
+    "styled-components": "^5.3.0",
     "sweetalert": "^2.1.2",
     "universal-cookie": "^4.0.4",
     "video-react": "^0.14.1",
