--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "react-sticky-box": "^0.9.3",
     "react-ticker": "^1.2.2",
     "slick-carousel": "^1.8.1",
+    "socket.io-client": "^4.1.3",
     "start": "^5.1.0",
     "sweetalert": "^2.1.2",
     "universal-cookie": "^4.0.4",
