--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "react-avatar-editor": "^11.1.0",
     "react-bootstrap": "^1.3.0",
     "react-datepicker": "^3.3.0",
+    "react-delay-link": "^1.1.6",
     "react-dom": "^17.0.2",
     "react-hook-form": "^7.10.1",
     "react-icons": "^3.11.0",
