--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@hbis/three-obj-mtl-loader": "^1.1.0",
     "@material-ui/core": "^4.11.4",
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
@@ -46,6 +47,11 @@
     "start": "^5.1.0",
     "styled-components": "^5.3.0",
     "sweetalert": "^2.1.2",
+    "three": "^0.130.1",
+    "three-obj-mtl-loader": "^1.0.3",
+    "three-orbit-controls": "^82.1.0",
+    "three-react-mtl-loader": "^1.2.0",
+    "three-react-obj-loader": "^1.0.4",
     "universal-cookie": "^4.0.4",
     "video-react": "^0.14.1",
     "web-vitals": "^1.0.1"
